# FranChess

./: CMakeLists.txt  README.md  board.c  board.h  displacement.c  displacement.h  findPiece.c  findPiece.h  gamestate.c  gamestate.h  legal.c  legal.h  logger.c  logger.h  main.c  move.c  move.h  piece.c  piece.h  threat.c  threat.h
